# Scheduled-Timing-App-ENGR-131

./: .gitignore  LICENSE  README.md  main  main.py  pyproject.toml  ui.py
board_code/: main.ino
docs/: index.html  search.js
docs/ti_kit_board_communication/: main.html
main/: TM1637.cpp  TM1637.h
ti_kit_board_communication/: main.py
